_sass/minima/_layout.scss
/**
 * Site header
 */
.site-header {
  border-top: 5px solid $grey-color-dark;
  border-bottom: 1px solid $grey-color-light;
  min-height: $spacing-unit * 1.865;
  z-index: 2;

  // Positioning context for the mobile navigation icon
  position: relative;
}

.site-title {
  @include relative-font-size(1.625);
  font-weight: 300;
  line-height: $base-line-height * $base-font-size * 2.25;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;
  -webkit-transition: 0.8s;

  &,
  &:visited {
    color: $grey-color-dark;
  }

  &:hover {
    // color: $brand-color;
    color: $grey-color;
    text-decoration: none;
  }

  &:active {
    color: black;
  }
}

.site-nav {
  float: right;
  line-height: $base-line-height * $base-font-size * 2.25;

  .nav-trigger {
    display: none;
  }

  .menu-icon {
    display: none;
  }

  .page-link {
    color: $grey-color-dark;
    line-height: $base-line-height;
    -webkit-transition: 0.8s;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }

    &:hover {
      color: $grey-color;
      text-decoration: none;
    }

    &:active {
      color: black;
    }
  }

  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: $spacing-unit / 2;
    background-color: $background-color;
    border: 1px solid $grey-color-light;
    border-radius: 5px;
    text-align: right;

    label[for="nav-trigger"] {
      display: block;
      float: right;
      width: 36px;
      height: 36px;
      z-index: 2;
      cursor: pointer;
    }

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      >svg {
        fill: $grey-color-dark;
      }
    }

    input~.trigger {
      clear: both;
      display: none;
    }

    input:checked~.trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      padding: 5px 10px;

      &:not(:last-child) {
        margin-right: 0;
      }

      margin-left: 20px;
    }
  }
}



/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid $grey-color-light;
  padding: $spacing-unit 0;
}

.footer-heading {
  @include relative-font-size(1.125);
  margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $grey-color;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit / 2;
  padding-left: $spacing-unit / 2;
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
  width: calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
  width: calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width: calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {

  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width: calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width: calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width: calc(100% - (#{$spacing-unit} / 2));
  }
}



/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0;
  flex: 1;
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}

.post-list {
  margin-left: 0;
  list-style: none;

  >li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}



/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit;
}

.post-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;

  @include media-query($on-laptop) {
    @include relative-font-size(2.25);
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    @include relative-font-size(2);

    @include media-query($on-laptop) {
      @include relative-font-size(1.75);
    }
  }

  h3 {
    @include relative-font-size(1.625);

    @include media-query($on-laptop) {
      @include relative-font-size(1.375);
    }
  }

  h4 {
    @include relative-font-size(1.25);

    @include media-query($on-laptop) {
      @include relative-font-size(1.125);
    }
  }
}

.soc,
.username,
.u-email {
  color: $grey-color;
  -webkit-transition: 0.8s;

  &,
  &:visited {
    color: $grey-color-dark;
  }

  &:hover {
    // color: $brand-color;
    color: $grey-color;
    text-decoration: none;
  }

  &:active {
    color: black;
  }
}

.title {
  color: $grey-color-dark;
}

.spec {
  color: black;
  -webkit-transition: 0.8s;
  transtion: color 0.1s;
  font-weight: 600;
  display: inline-block;
  position: relative;

  &,
  &:visited {
    color: $grey-color-dark;
  }

  &:hover {
    // color: $brand-color;
    color: $grey-color;
    text-decoration: none;
  }

  &:active {
    color: black;
  }
}

.arrow {
  position: absolute;
  left: 100%;
  transition: all 0.3s ease;
}

.spec:hover .arrow {
  left: 110%;
  /* Change this value to adjust the amount the arrow moves */
}

@import url('https://fonts.googleapis.com/css?family=Montserrat');

.container {
  padding-top: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container p {
  font-size: 3rem;
  padding: 0.5rem;
  // font-weight: bold;
  letter-spacing: 0.1rem;
  text-align: center;
  overflow: hidden;
}

.container p span.typed-text {
  font-weight: normal;
  color: black;
}

.container p span.cursor {
  display: inline-block;
  background-color: #111;
  margin-left: 0.1rem;
  width: 3px;
  animation: blink 0.75s infinite;
}

hr {
  background-color: $grey-color-light;
  height: 1px;
  border: 0;
}

#me {
  backdrop-filter: blur(5.5px);
  -webkit-backdrop-filter: blur(5.5px);
  background: rgba(255, 255, 255, 0.5);
  border: 1px solid rgba(255, 255, 255, 0.01);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
  color: #232323;
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  background: rgba(255, 255, 255, 0.3);
  border: 1px solid rgba(255, 255, 255, 0.34);
}

.container p span.cursor.typing {
  animation: none;
}

@keyframes blink {
  0% {
    background-color: #ccc;
  }

  49% {
    background-color: #ccc;
  }

  50% {
    background-color: transparent;
  }

  99% {
    background-color: transparent;
  }

  100% {
    background-color: #ccc;
  }
}

body,
body.other {
  transition: background 0.2s linear;
}

body.dark {
  background: rgb(14, 16, 23);
  // color: rgb(144, 162, 136);
  color: #CAD1D8;

  #me {
    backdrop-filter: blur(5.5px);
    -webkit-backdrop-filter: blur(5.5px);
    background: rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(255, 255, 255, 0.01);
    box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
    color: #232323;
    backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px);
    background: rgba(255, 255, 255, 0.3);
    border: 1px solid rgba(0, 0, 0, 0.34);
  }

  .email-link, .linkedin-link {
    &:hover {
      color: #2c4660 !important; 
    }
  }

  hr {
    background-color: #CAD1D8;
  }

  @media screen and (max-width: 600px) {
    .site-nav {
      position: absolute;
      top: 9px;
      right: 15px;
      background-color: rgb(14, 16, 23);
      border: 1px solid #CAD1D8;
      border-radius: 5px;
      text-align: right;
      transition: background 0.2s linear;
    }

    .site-nav .menu-icon>svg {
      fill: #CAD1D8;
    }
  }

  .soc,
  .u-email,
  .username,
  .spec,
  .site-title {
    color: #CAD1D8 !important;
    -webkit-transition: 0.8s;

    &,
    &:visited {
      color: #CAD1D8 !important;
    }

    &:hover {
      color: #939da9 !important;
    }

    &:active {
      color: #4f545d !important;
    }
  }

  .svg-icon {
    fill: #CAD1D8 !important;
  }

  .container p span.cursor {
    background-color: #CAD1D8;
  }

  @keyframes blink {
    0% {
      background-color: #CAD1D8 !important;
    }

    49% {
      background-color: #CAD1D8 !important;
    }

    50% {
      background-color: transparent;
    }

    99% {
      background-color: transparent;
    }

    100% {
      background-color: #CAD1D8 !important;
    }
  }

  .footer-col.footer-col-3 {
    color: #CAD1D8;
  }

  .page-link {
    color: #CAD1D8;

    &:active {
      color: #4f545d !important;
    }

    &:hover {
      color: #939da9;
    }
  }

  .container p span.typed-text {
    font-weight: normal;
    color: #CAD1D8;

  }

  .site-header {
    border-top: 5px solid #CAD1D8;
    border-bottom: 1px solid #CAD1D8;
  }

  .site-footer {
    border-top: 1px solid #CAD1D8;
  }
}

.checkbox {
  opacity: 0;
  position: absolute;
}

.label {
  background-color: $grey-color-dark;
  border-radius: 50px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px;
  position: relative;
  height: 20px;
  width: 36px;
  transform: scale(1.5);
}

.label .ball {
  background-color: #fff;
  border-radius: 50%;
  position: absolute;
  top: 3px;
  left: 3px;
  height: 14px;
  width: 14px;
  transform: translateX(0px);
  transition: transform 0.2s linear;
}

.checkbox:checked+.label .ball {
  transform: translateX(16px);
}


.fa-moon {
  color: #CAD1D8;
}

.fa-sun {
  color: rgb(234, 191, 99);
}

#me {
  width: 190px;
  height: 200px;
  border-radius: 90%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

